# TextualFormulas

./: CMakeLists.txt  README.md  blkBeside.hpp  blkBlock.cpp  blkBlock.hpp  blkDebug.cpp  blkDebug.hpp  blkMoveRef.cpp  blkMoveRef.hpp  blkOver.hpp  blkText.cpp  blkText.hpp  test
include/: blkBeside.hpp  blkBlock.hpp  blkDebug.hpp  blkOver.hpp  blkText.hpp
src/: blkBeside.cpp  blkOperators.cpp  blkOver.cpp  main.cpp
test/: test-003-text.cpp  test-004-operators.cpp
